[package]
name = "nomansplaydate"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"
opt-level = 'z'
lto = true

[profile.release]
panic = "abort"
opt-level = 'z'
lto = true

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
anyhow = { version = "1.0.66", default-features = false }
euclid = { version = "0.22.7", default-features = false, features = [ "libm" ] }
bevy_playdate = { path = "../bevy_playdate" }
crankstart = { path = "../crankstart" }
crankstart-sys = { path = "../crankstart/crankstart-sys" }
bevy = { path = "../bevy", default-features = false, features = ["no_std"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
critical-section = "1"

