[package]
name = "nomansplaydate"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"
opt-level = 'z'
lto = true

[profile.release]
panic = "abort"
opt-level = 'z'
lto = true

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
anyhow = { version = "1.0.66", default-features = false }
euclid = { version = "0.22.7", default-features = false, features = [ "libm" ] }
# bevy_playdate = { path = "../bevy_playdate" }
crankstart = { git = "https://github.com/pd-rs/crankstart.git" }
crankstart-sys = { git = "https://github.com/pd-rs/crankstart.git" }
# bevy = { path = "../bevy", default-features = false, features = ["no_std"] }
bevy = { git = "https://github.com/maximetinu/bevy.git", branch = "nostd", default-features = false, features = ["no_std"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
critical-section = "1"
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }

